--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-tilt": "^1.0.2",
     "redux": "^4.2.1",
     "sweetalert2": "^11.7.32"
   },
