--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-simple-typewriter": "^5.0.1",
     "react-tilt": "^1.0.2",
     "redux": "^4.2.1",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.7.32",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
