fix product color box bug

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-tilt": "^1.0.2",
     "redux": "^4.2.1",
     "sweetalert2": "^11.7.32",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
